add comments and remove silly

--- a/public/about.html
+++ b/public/about.html
@@ -20,5 +20,25 @@
             <div class="menu-toggle">&#9776;</div>
         </nav>
     </header>
+    <main>
+        <section id="abt1">
+            <h2>About RISE</h2>
+            <p>
+                We are a group of teenagers dedicated to helping reduce student mental health issues and the lack of awareness.
+                We are actively spreading awareness and researching ways to lessen common mental health issues in our community.
+            </p>
+        </section>
+        
+        <section id="abt2">
+            <h2>Our Goals</h2>        
+            <li>Raise awareness of the problems of the mental health among students.</li>
+            <li>Offer access to mental health support online through AI tools and resources.</li>
+            <li>Build a family that takes care of each other’s mental health.</li>
+        </section>
+
+        <section id="abt3">
+            <h2>Our Members</h2>
+        </section>
+    </main>
 </body>
 </html>   
