--- a/public/index.html
+++ b/public/index.html
@@ -74,7 +74,7 @@
                 <input type="email" id="email" name="email" placeholder="Your Email" />
 
                 <label for="message">Message:</label>
-                <textarea id="message" name="message" placeholder="Your Message, please don't send over 10 messages per day"></textarea>
+                <textarea id="message" name="message" placeholder="Your Message"></textarea>
 
                 <button class="custom-button" type="submit" id="submit">Submit</button>
             </form>
@@ -90,7 +90,7 @@
                 const sub = document.getElementById("submit");
                 sub.addEventListener("click", function () {
                     console.log("test");
-                    //WHY IS THIS NOT WORKING AUEHGSEOIGUHSGUVGIKEHGAe
+                    // WHY IS THIS NOT WORKING AUEHGSEOIGUHSGUVGIKEHGAe
                     templateParams = {
                         from_name: document.getElementById("name").value + " at " + document.getElementById("email").value,
                         message: document.getElementById("message").value,
