Update theme and mission statement

--- a/public/index.html
+++ b/public/index.html
@@ -37,9 +37,7 @@
         <section id="mission">
             <h2>Our Mission</h2>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
-                euismod, nunc at convallis tincidunt, massa urna facilisis quam, sit
-                amet hendrerit justo leo a metus.
+                Giving students the power and knowledge to tackle and maintain mental health, through free resources on the web as well as in technology and the campaign.
             </p>
         </section>
 
