Added contact, fixed comment error

--- a/public/contact.html
+++ b/public/contact.html
@@ -20,5 +20,13 @@
             <div class="menu-toggle">&#9776;</div>
         </nav>
     </header>
+
+    <section id="contact">
+        <h2>Contact Us</h2>
+        <li>Euchan Jung: s23290752@sjajeju.kr</li>
+        <li>JiHo Lee: s17011929@sjajeju.kr</li>
+        <li>YuBin Hyun: s22290633@sjajeju.kr</li>
+        <li>Yongseon Kim: s24293943@sjajeju.kr</li>
+    </section>
 </body>
 </html>   
