Added toggle for dark mode

--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8" />
     <title>RISE</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css" class="styles" />
 </head>
 
 <body>
     <header>
-        <h1>RISE</h1>
+        <h1 style="cursor: pointer;" onclick="darkMode()">RISE</h1>
+        
         <h2 style="text-align: center; color: var(--accent-color)">
             Resilience Inspiration Support Empowerment
         </h2>
@@ -31,7 +32,7 @@
             <p>
                 We are a a capstone group.
             </p>
-            <button class="custom-button" ;>Learn More</button>
+            <button class="custom-button">Learn More</button>
         </section>
 
         <section id="mission">
@@ -124,6 +125,7 @@
             <a href="https://www.instagram.com/"><img src="icon-instagram.png" alt="Instagram" /></a>
         </div>
     </footer>
+    <script type="text/javascript" src="styleChange.js"></script>
 </body>
 
 </html>
