--- a/public/about.html
+++ b/public/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" class="styles">
 </head>
 <body>
     <header>
@@ -40,5 +40,6 @@
             <h2>Our Members</h2>
         </section>
     </main>
+    <script type="text/javascript" src="styleChange.js"></script>
 </body>
 </html>   
