--- a/public/contact.html
+++ b/public/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" class="styles">
 </head>
 <body>
     <header>
@@ -28,5 +28,6 @@
         <li>YuBin Hyun: s22290633@sjajeju.kr</li>
         <li>Yongseon Kim: s24293943@sjajeju.kr</li>
     </section>
+    <script type="text/javascript" src="styleChange.js"></script>
 </body>
 </html>   
