--- a/public/resources.html
+++ b/public/resources.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resources</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" class="styles">
 </head>
 <body>
     <header>
@@ -20,5 +20,6 @@
             <div class="menu-toggle">&#9776;</div>
         </nav>
     </header>
+    <script type="text/javascript" src="styleChange.js"></script>
 </body>
 </html>   
