--- a/public/about.html
+++ b/public/about.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>About Us</h1>
+        <h1 style="cursor: pointer;" onclick="darkMode()">About Us</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
