--- a/public/resources.html
+++ b/public/resources.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Resources</h1>
+        <h1 style="cursor: pointer;" onclick="darkMode()">Resources</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
