--- a/public/contact.html
+++ b/public/contact.html
@@ -23,10 +23,10 @@
 
     <section id="contact">
         <h2>Contact Us</h2>
-        <li>Euchan Jung: s23290752@sjajeju.kr</li>
-        <li>JiHo Lee: s17011929@sjajeju.kr</li>
-        <li>YuBin Hyun: s22290633@sjajeju.kr</li>
-        <li>Yongseon Kim: s24293943@sjajeju.kr</li>
+        <li>Euchan: s23290752@sjajeju.kr</li>
+        <li>JiHo: s17011929@sjajeju.kr</li>
+        <li>YuBin: s22290633@sjajeju.kr</li>
+        <li>Yongseon: s24293943@sjajeju.kr</li>
     </section>
     <script type="text/javascript" src="styleChange.js"></script>
 </body>
